# nobleport.etf

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .vercelignore  AI_GUARDRAILS.md  Anchor.toml  BACKEND_REVIEW.md  CLAUDE.md  COMPLIANCE_REVIEW.md  CONTRACT_ARCHITECTURE.md  Cargo.toml  Dockerfile  OnePager_Production.py  README.md  docker-compose.yml  fly.toml  mcp.config.json  next.config.js  package-lock.json  package.json  requirements.txt  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: payment-node-guard.yml
app/: main.py
app/core/: metrics.py  metrics_middleware.py  metrics_worker.py
app/workers/: context.py  tasks_anchor.py  tasks_deploy.py  tasks_verify.py
backend/: .env.example  Dockerfile  alembic.ini  main.py  requirements.txt
backend/agents/: __init__.py  audit_beacon.py  base.py  cyborg.py  gcagent.py  journey.py  orchestrator.py  permit_stream.py  recursive_learning.py  self_improvement.py  stephanie.py  stephanie_policy.py  truth_registry.py
backend/api/: agents.py  audit.py  audit_api.py  avatar.py  buildertrend.py  change_orders.py  dashboard.py  jobs.py  (+37 more)
backend/rust/crates/blockchain-indexer/: Cargo.toml
backend/rust/crates/blockchain-indexer/src/: main.rs
backend/rust/crates/token-manager/: Cargo.toml
backend/rust/crates/token-manager/src/: main.rs
bot/: deploy.config.js  deploy.js  generate.js  index.js  package.json
contracts/: AttestationRegistry.sol  AuditBeacon.sol  BondStreamLinker.sol  CrossChainBridgeRouter.sol  DEPLOYMENT.md  Escrow.sol  FiatRouter.sol  GCagentProjectManagement.sol  HumanApprovalGateway.sol  JobFactory.sol  LEGAL_STATUS.md  MassachusettsBuildingPermits.sol  MerkleRootAnchorer.sol  MilestoneEscrow.sol  NBPT.sol  NBPTSecurityToken1400.sol  NBPTToken.sol  NPCAgreement.sol  NPETF.sol  NoblePortConstructionEscrow.sol  PermitNFTEngine.sol  RealEstateNFT.sol  ReserveVault.sol  RetainageVault.sol  RevocationRootManager.sol  SBTFactory.sol  SnapshotGovernanceBridge.sol  SubIdentityVault.sol  TWAPOracleAdapter.sol  TreasuryBotV3.sol  ZkSBTCredentialRegistry.sol  ZoneMintSEA.sol  ZoningCourt.sol
cyborg/: README.md
designagent/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  smoke-test.sh
docs/: ARCHITECTURE.md  construction-compliance-os.md  google-ads-payment-guide.md  wallet-integration.md
gcagent/: README.md  __init__.py  capabilities.py  nobleport.py  skills.yaml  system_prompt.md
infra/: docker-compose.yml
my-site/: index.html  package.json  script.js  styles.css
permit_monitor/: README.md  config.json  permit_monitor.py  sample_permits.json  test_permit_monitor.py
permits/: permits_output.json
programs/nbpt-transfer-hook/: Cargo.toml
programs/nbpt-transfer-hook/src/: lib.rs
programs/noble-distributor/: Cargo.toml
programs/noble-distributor/src/: lib.rs
public/: console.html
rails/: .env.example  package.json  server.js
replit-backend/: .env.example  .replit  README.md  package-lock.json  package.json
scripts/: claim.ts  fund_vault.ts  init_distributor.ts  nobleport-run-all.sh  smoke-test.sh
services/nobleport-rust/: Cargo.toml
services/nobleport-rust/crates/blockchain-indexer/: Cargo.toml
services/nobleport-rust/crates/blockchain-indexer/src/: chain.rs  ens.rs  main.rs  price.rs
services/nobleport-rust/crates/common/: Cargo.toml
services/nobleport-rust/crates/common/src/: lib.rs
services/nobleport-rust/crates/payment-gateway/: Cargo.toml
services/nobleport-rust/crates/payment-gateway/src/: audit.rs  main.rs  treasury.rs
services/nobleport-rust/crates/payment-gateway/src/providers/: metamask.rs  mod.rs  paypal.rs  stripe.rs  uniswap.rs
services/nobleport-rust/crates/token-manager/src/: compliance.rs  ledger.rs  main.rs
services/nobleport-rust/crates/websocket-server/: Cargo.toml
services/nobleport-rust/crates/websocket-server/src/: main.rs
skills/: README.md  __init__.py  registry.py
src/: architecture-diagram.ts  ecosystem.config.ts  middleware.ts
stephanie/: __init__.py  config.py  graph.py
web3/: README.md
(+855 files in other folders)
