[package]
name = "noble-distributor"
version = "0.1.0"
edition = "2021"
description = "NBPT Token-2022 Merkle distributor for NoblePort ETF distributions"

[lib]
crate-type = ["cdylib", "lib"]
name = "noble_distributor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
